--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>confidence-landing-page</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="icon" href="fav-icon.jpeg" type="image/x-icon">
+
 </head>
 <body>
   <header class="navbar">
